added code for openai models

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "40f31f90",
    "metadata": {},
    "outputs": [],
@@ -25,19 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba254a9e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/intelSys/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Document summaries:\n",
+      "Document 1 describes a dog as a loyal companion with unique traits and personalities. Dogs provide comfort, protection, and love to their owners, making them beloved pets worldwide.\n",
       "\n",
-      "One text describes a common human-companion relationship, highlighting the unique qualities and roles that dogs play in people's lives. It showcases their versatility as pets and the positive impact they have on owners.\n",
-      "\n",
-      "The other text delves into ancient Rome's history and achievements, featuring its architectural marvels, engineering feats, and cultural legacies. It highlights the Roman Empire's vast territories, military prowess, and enduring influence on modern societies.\n"
+      "Document 2 delves into ancient Roman history, describing the city of Rome as the heart of the vast empire. The Romans were skilled engineers who built iconic structures and an extensive network of roads and aqueducts that connected their territories, ultimately establishing a legacy in art, law, and governance.\n"
      ]
     }
    ],
@@ -60,6 +66,24 @@
     "# Query\n",
     "response = query_engine.query(\"Summarize each document in a few sentences.\")\n",
     "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddcd2582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use OpenAI models for embeddings\n",
+    "# from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
+    "\n",
+    "# documents = SimpleDirectoryReader('files').load_data()\n",
+    "# index = VectorStoreIndex.from_documents(documents)\n",
+    "# query_engine = index.as_query_engine()\n",
+    "# response = query_engine.query(\"summarize each document in a few sentences\")\n",
+    "\n",
+    "# print(response)\n"
    ]
   }
  ],
