--- a/test.ipynb
+++ b/test.ipynb
@@ -61,6 +61,82 @@
     "response = query_engine.query(\"Summarize each document in a few sentences.\")\n",
     "print(response)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VERSION HECTOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use local model\n",
+    "from llama_index.llms.ollama import Ollama\n",
+    "llm = Ollama(model=\"llama3.2:latest\", request_timeout=120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "from llama_index.graph_stores import SimpleGraphStore\n",
+    "from llama_index.indices.knowledge_graph import KnowledgeGraphIndex\n",
+    "from llama_index.query_engine import RouterQueryEngine\n",
+    "from llama_index.tools import QueryEngineTool\n",
+    "\n",
+    "# Load documents\n",
+    "documents = SimpleDirectoryReader('files').load_data()\n",
+    "\n",
+    "\n",
+    "# Set up local embeddings (you can specify a different model too)\n",
+    "embed_model = HuggingFaceEmbedding(model_name=\"all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# Build Knowledge Graph Index\n",
+    "graph_store = SimpleGraphStore()\n",
+    "kg_index = KnowledgeGraphIndex.from_documents(\n",
+    "    documents,\n",
+    "    graph_store=graph_store,\n",
+    "    llm=llm,\n",
+    "    max_triplets_per_chunk=10\n",
+    ")\n",
+    "\n",
+    "# Build the index with local embeddings\n",
+    "vector_index = VectorStoreIndex.from_documents(documents, llm=llm)\n",
+    "\n",
+    "# Create query engines\n",
+    "kg_engine = kg_index.as_query_engine(llm=llm)\n",
+    "vector_engine = vector_index.as_query_engine(llm=llm)\n",
+    "\n",
+    "# Combine into a Router engine\n",
+    "tools = [\n",
+    "    QueryEngineTool.from_defaults(\n",
+    "        query_engine=kg_engine,\n",
+    "        description=\"Use for fact-based or entity relationship queries.\"\n",
+    "    ),\n",
+    "    QueryEngineTool.from_defaults(\n",
+    "        query_engine=vector_engine,\n",
+    "        description=\"Use for general or contextual document questions.\"\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "router_engine = RouterQueryEngine.from_defaults(tools=tools, llm=llm)\n",
+    "\n",
+    "# Set up query engine using Ollama\n",
+    "query_engine = index.as_query_engine(llm=llm)\n",
+    "\n",
+    "# Query\n",
+    "response = query_engine.query(\"What are the main entities and what do they do?\")\n",
+    "print(response)\n"
+   ]
   }
  ],
  "metadata": {
