--- a/test.ipynb
+++ b/test.ipynb
@@ -8,12 +8,12 @@
    "outputs": [],
    "source": [
     "# Install Ollama and Huggingface packages\n",
-    "%pip install llama-index-llms-ollama llama-index-embeddings-huggingface"
+    "%pip install llama-index-llms-ollama llama-index-embeddings-huggingface llama-index networkx llama-index-graph-stores-neo4j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "40f31f90",
    "metadata": {},
    "outputs": [],
@@ -41,9 +41,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Document 1 describes a dog as a loyal companion with unique traits and personalities. Dogs provide comfort, protection, and love to their owners, making them beloved pets worldwide.\n",
+      "Document 1:\n",
+      "Dogs are considered loyal companions due to their unique traits and personalities. They provide comfort, protection, and love to their owners, making them beloved pets worldwide. Whether active or relaxed, dogs bring joy to people's lives.\n",
       "\n",
-      "Document 2 delves into ancient Roman history, describing the city of Rome as the heart of the vast empire. The Romans were skilled engineers who built iconic structures and an extensive network of roads and aqueducts that connected their territories, ultimately establishing a legacy in art, law, and governance.\n"
+      "Document 2:\n",
+      "The city of Rome was the heart of the Roman Empire in ancient times. The Romans were skilled engineers who built grand structures like the Colosseum and Pantheon. They created extensive networks of roads, aqueducts, and bridges that connected their territories and left a lasting impact on modern societies.\n"
      ]
     }
    ],
@@ -69,7 +71,51 @@
    ]
   },
   {
-<<<<<<< HEAD
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d485a3b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document summaries cannot be provided as there are no documents to summarize.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "from llama_index.core.indices.knowledge_graph import KnowledgeGraphIndex\n",
+    "from llama_index.core.graph_stores import SimpleGraphStore\n",
+    "\n",
+    "# Load documents\n",
+    "documents = SimpleDirectoryReader('files').load_data()\n",
+    "\n",
+    "# Set up local embeddings (you can specify a different model too)\n",
+    "embed_model = HuggingFaceEmbedding(model_name=\"all-MiniLM-L6-v2\")\n",
+    "\n",
+    "graph_store = SimpleGraphStore()\n",
+    "\n",
+    "# Build the index with local embeddings\n",
+    "kg_index = KnowledgeGraphIndex.from_documents(\n",
+    "    documents,\n",
+    "    graph_store=graph_store,\n",
+    "    embed_model='local',\n",
+    "    llm=llm,\n",
+    "    max_triplets_per_chunk=10\n",
+    ")\n",
+    "\n",
+    "# Set up query engine using Ollama\n",
+    "query_engine = kg_index.as_query_engine(llm=llm)\n",
+    "\n",
+    "# Query\n",
+    "response = query_engine.query(\"Summarize each document in a few sentences.\")\n",
+    "print(response)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,27 +124,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use local model\n",
+    "\n",
     "from llama_index.llms.ollama import Ollama\n",
     "llm = Ollama(model=\"llama3.2:latest\", request_timeout=120)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document 1:\n",
+      "Dogs are widely regarded as loyal companions due to their unique traits and abilities. They provide comfort, protection, and unwavering love to their owners, making them beloved pets worldwide.\n",
+      "\n",
+      "Document 2:\n",
+      "The Roman Empire's heart was the city of Rome itself, renowned for its grand architecture, engineering prowess, and extensive territorial network. The Roman Republic fostered a skilled society that left lasting impacts on art, law, and governance in modern societies today.\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
-    "from llama_index.graph_stores import SimpleGraphStore\n",
-    "from llama_index.indices.knowledge_graph import KnowledgeGraphIndex\n",
-    "from llama_index.query_engine import RouterQueryEngine\n",
-    "from llama_index.tools import QueryEngineTool\n",
+    "from llama_index.core.graph_stores import SimpleGraphStore\n",
+    "from llama_index.core.indices.knowledge_graph import KnowledgeGraphIndex\n",
+    "from llama_index.core.query_engine import RouterQueryEngine\n",
+    "from llama_index.core.tools import QueryEngineTool\n",
     "\n",
     "# Load documents\n",
     "documents = SimpleDirectoryReader('files').load_data()\n",
@@ -112,12 +171,13 @@
     "kg_index = KnowledgeGraphIndex.from_documents(\n",
     "    documents,\n",
     "    graph_store=graph_store,\n",
+    "    embed_model='local',\n",
     "    llm=llm,\n",
     "    max_triplets_per_chunk=10\n",
     ")\n",
     "\n",
     "# Build the index with local embeddings\n",
-    "vector_index = VectorStoreIndex.from_documents(documents, llm=llm)\n",
+    "vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
     "\n",
     "# Create query engines\n",
     "kg_engine = kg_index.as_query_engine(llm=llm)\n",
@@ -134,32 +194,11 @@
     "        description=\"Use for general or contextual document questions.\"\n",
     "    )\n",
     "]\n",
-    "\n",
-    "router_engine = RouterQueryEngine.from_defaults(tools=tools, llm=llm)\n",
-    "\n",
-    "# Set up query engine using Ollama\n",
-    "query_engine = index.as_query_engine(llm=llm)\n",
+    "router_engine = RouterQueryEngine.from_defaults(query_engine_tools=tools, llm=llm)\n",
     "\n",
     "# Query\n",
-    "response = query_engine.query(\"What are the main entities and what do they do?\")\n",
+    "response = router_engine.query(\"Summarize each document in a few sentences.\")\n",
     "print(response)\n"
-=======
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddcd2582",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use OpenAI models for embeddings\n",
-    "# from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
-    "\n",
-    "# documents = SimpleDirectoryReader('files').load_data()\n",
-    "# index = VectorStoreIndex.from_documents(documents)\n",
-    "# query_engine = index.as_query_engine()\n",
-    "# response = query_engine.query(\"summarize each document in a few sentences\")\n",
-    "\n",
-    "# print(response)\n"
->>>>>>> 951e97d39c181b8d2325bc50a334f5409acc963f
    ]
   }
  ],
