--- a/test.ipynb
+++ b/test.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "### Data\n",
-    "Anna is working at UBB, she teaches semantic web, she used to teach databases and conception modelling. Teaching is a hard job as it requires to deal with students, long hours and lots of patience. UBB is located in Cluj Napoca in Romania."
+    "Anna is working at UBB, she teaches semantic web, she used to teach databases and conception modelling. <span style=\"background-color:rgba(226, 86, 22, 0.52)\">Teaching is a hard job as it requires to deal with students, long hours and lots of patience. Donkey Kong (...)</span>. UBB is located in Cluj Napoca in Romania."
    ]
   },
   {
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "### Knowledge Graph Example\n",
-    "Anna is working at UBB, she teaches semantic web, she used to teach databases and conception modelling. Teaching is a hard job as it requires to deal with students, long hours and lots of patience. UBB is located in Cluj Napoca in Romania."
+    "Anna is working at UBB, she teaches semantic web, she used to teach databases and conception modelling. <span style=\"background-color:rgba(226, 86, 22, 0.52)\">Teaching is a hard job as it requires to deal with students, long hours and lots of patience. Donkey Kong (...)</span>. UBB is located in Cluj Napoca in Romania."
    ]
   },
   {
